--- a/src/futscore/backend/templates/layout.html
+++ b/src/futscore/backend/templates/layout.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-green">
             <div class="container-fluid container TheNavBar ms-auto">
-                <a class="navbar-brand" href="#">FutScore</a>
+                <a class="navbar-brand" href="{% url 'index' %}">FutScore</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" style="display: flex; justify-content: center; align-items: center;"><i class="ri-menu-line"></i></span>
                 </button>
@@ -59,7 +59,7 @@
 				<a href="{% url 'login' %}">Login</a>
             </div>
             <div class="copyright">
-                <p>copyright &copy; <a href="#">FutScore</a></p>
+                <p>copyright &copy; <a href="{% url 'index' %}">FutScore</a></p>
             </div>
         </div>
     </footer>
