--- a/src/futscore/static/style.css
+++ b/src/futscore/static/style.css
@@ -273,7 +273,8 @@ th {
 }
 
 .campeonatos a,
-.perfilCampeonatos a {
+.perfilCampeonatos a,
+.jogos .jogo a {
   text-decoration: none;
   color: black;
 }
